WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100205
Fix CALayer hiearchy when combining tiling with preserve-3d
https://bugs.webkit.org/show_bug.cgi?id=100205
Summary
Fix CALayer hiearchy when combining tiling with preserve-3d
Simon Fraser (smfr)
Reported
2012-10-23 23:25:47 PDT
Fix CALayer hiearchy when combining tiling with preserve-3d
Attachments
Patch
(11.92 KB, patch)
2012-10-23 23:35 PDT
,
Simon Fraser (smfr)
dino
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2012-10-23 23:35:16 PDT
Created
attachment 170326
[details]
Patch
Simon Fraser (smfr)
Comment 2
2012-10-23 23:35:40 PDT
<
rdar://problem/12557752
>
WebKit Review Bot
Comment 3
2012-10-24 04:36:39 PDT
Comment on
attachment 170326
[details]
Patch
Attachment 170326
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/14552186
New failing tests: platform/chromium/virtual/softwarecompositing/tiling/backface-preserve-3d-tiled.html compositing/tiling/backface-preserve-3d-tiled.html
Dean Jackson
Comment 4
2012-10-24 11:05:19 PDT
Comment on
attachment 170326
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=170326&action=review
> Source/WebCore/ChangeLog:25 > + Test: compositing/tiling/backface-preserve-3d-tiled.html
Does the chrome failure just get baselined at some later stage?
> Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:1192 > + PlatformCALayerList& childListForSublayers = m_structuralLayer ? structuralLayerChildren : primaryLayerChildren;
It might be a bit clearer if you move this line down to in front of the loop where you actually use it, but not a strong opinion.
> Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:1205 > + if (m_contentsLayer && m_contentsVisible) > + primaryLayerChildren.append(m_contentsLayer);
Does the FIXME you removed still apply?
Simon Fraser (smfr)
Comment 5
2012-10-24 13:37:02 PDT
http://trac.webkit.org/changeset/132394
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug